force-app/main/default/objects/IT_Help_Tracker__c/IT_Help_Tracker__c.object-meta.xml
<CustomObject>
    <label>IT Help Tracker</label>
    <nameField>
        <label>IT Help Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IT Help Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>