force-app/main/default/objects/IT_Help_Tracker__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>IT_Help_Times</relationshipName>
    <type>Lookup</type>
</CustomField>