force-app/main/default/objects/IT_Help_Tracker__c/fields/IT_Help__c.field-meta.xml
<CustomField>
    <fullName>IT_Help__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT Help</label>
    <referenceTo>Tickets__c</referenceTo>
    <relationshipName>IT_Help_Times</relationshipName>
    <type>Lookup</type>
</CustomField>