force-app/main/default/objects/IT_Help_Tracker__c/fields/Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IT_Help_Times</relationshipName>
    <type>Lookup</type>
</CustomField>