force-app/main/default/objects/IT_Help_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Timestamp__c</columns>
    <columns>Priority__c</columns>
    <columns>IT_Help__c</columns>
    <columns>Assigned__c</columns>
    <columns>Modified_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>